# snowflake-monorepo

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
benchmarks/: README.md
benchmarks/ghz/: batch_next_snowflake.toml  next_snowflake.toml
benchmarks/scripts/: benchmark.sh
deploy/docker/: Dockerfile.temporal-worker
deploy/docker-compose/: docker-compose.yml
deploy/docker-compose/prometheus/: prometheus.yml
docker/: Dockerfile.server  docker-compose.server.yml  prometheus.yml
examples/go/: go.mod  go.sum  main.go
examples/python/: __main__.py  pyproject.toml
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/typescript/: package.json  tsconfig.json
examples/typescript/src/: main.ts
proto/snowflake/v1/: snowflake.proto  snowflake_service.proto
snowflake-go/cmd/server/: main.go
snowflake-go/cmd/temporalworker/: main.go
snowflake-go/internal/api/: api.go
snowflake-go/internal/config/: base.go  grpc.go  load.go  log.go  pprof.go  server.go  snowflake.go  temporal.go  tls.go  worker.go
snowflake-go/internal/snowflake/: errors.go  service.go  service_test.go  snowflake.go  snowflake_test.go
snowflake-python/: pyproject.toml
snowflake-python/src/snowflake_python/proto/snowflake/: v1.py
snowflake-python/src/snowflake_python/proto/snowflake/temporal/: v1.py
snowflake-rust/: Cargo.toml.tmpl
snowflake-rust/snowflake-proto/: Cargo.toml
snowflake-typescript/snowflake-proto/: package.json  tsconfig.json
(+28 files in other folders)
