[project]
name = "snowflake-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Amari Robinson",email = "nospam@amari.codes"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.56.2",
    "protobuf>=6.33.0"
]

[tool.poetry]
packages = [{include = "snowflake_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
